tests/build/fail/widget/cannot_instantiate_widget_mixin.stderr
error: cannot instantiate widget mix-ins
 --> $DIR/cannot_instantiate_widget_mixin.rs:3:1
  |
3 | #[widget_mixin($crate::test_mixin)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
7 |     let _ = test_mixin!();
  |             ------------- in this macro invocation
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
